--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "刘克宇 (Keyu Liu)"
-  avatar           : "profile.png"
+  avatar           : "Keyu.png"
   bio              : "每天进步一点点"
   location         : "中国成都9527"
   employer         :
