--- a/_config.yml
+++ b/_config.yml
@@ -106,10 +106,10 @@ author:
   orcid            : "https://orcid.org/0000-0002-3188-6284"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : #http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
