--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "中文版"
+    url: /chinese-about/
 
   #- title: "Talks"
   #  url: /talks/    
