--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "中文版"
-    url: /chinese-about/
+    url: /publications/
 
   #- title: "Talks"
   #  url: /talks/    
